# bot

./: .env.example  .env.template  .gitignore  .gitmodules  .pylintrc  Dockerfile  LICENSE  README.md  _config.yml  alembic.ini  config.py  db.py  documentation.md  entrypoint.sh  faq.md  forms.py  handles_register.py  index.md  keyboards.py  main.py  middlewares.py  mypy.ini  pyproject.toml  requirements.in  requirements.txt  rules.md  run-app.py  run.py  setenv-example.sh
.github/workflows/: cicd.yml  pylint.yml
_includes/: yandex_metrika.html
_layouts/: default.html
answers/: menu.py  settings.py
app/: __init__.py
app/exceptions/: CheckBaseException.py  ClientResponseErrorParamsException.py  DatabaseException.py  FileCompareException.py  OrioksParseDataException.py  __init__.py  (+1 more)
checking/: get_orioks_marks.py  json_files.py  on_startup.py
db/: admins_statistics.py  notify_settings.py  user_first_add.py  user_status.py
handlers/: admins.py  callback_queries.py  commands.py  errors.py  notify_settings.py  orioks_auth.py
images/: imager.py  test.py
sql/: select_count_notify_settings_statistics.sql  select_count_user_status_statistics.sql  select_is_user_orioks_authenticated_from_user_status.sql  select_user_orioks_attempts_from_user_status.sql  update_inc_user_orioks_attempts.sql  update_user_status_set_is_user_agreement_accepted.sql  update_user_status_set_is_user_orioks_authenticated.sql
utils/: delete_file.py  exceptions.py  exeptions.py  handle_orioks_logout.py  json_files.py  make_request.py  makedirs.py  my_isdigit.py  notify_to_user.py  orioks.py
(+100 files in other folders)
